apps/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sonarr
    namespace: media
spec:
    selector:
        app: sonarr
    ports:
        - port: 80
          targetPort: 9000
          protocol: TCP
          name: http
    type: ClusterIP
