apps/media/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-httproute
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
      sectionName: wildcard-https
  hostnames:
    - sonarr.thisratis.gay
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-anime-httproute
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
      sectionName: wildcard-https
  hostnames:
    - sonarr-anime.thisratis.gay
  rules:
    - backendRefs:
        - name: sonarr-anime
          port: 80
