apps/media/sonarr/authentik-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
    name: sonarr-authentik-policy
    namespace: istio-ingress
spec:
    targetRefs:
        - name: gateway
          kind: Gateway
          group: gateway.networking.k8s.io
    action: CUSTOM
    provider:
        name: authentik
    rules:
        - to:
              - operation:
                    hosts:
                        - "sonarr.thisratis.gay"
                        - "sonarr-anime.thisratis.gay"
